--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         Creative agency Solonitsky, Panchenko and Pershin
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Креативное агенство Солоницкий, Панченко и Першин | Creative agency Solonitsky, Panchenko and Pershin"
+    <meta name="description" content="Креативное агенство Солоницкий, Панченко и Першин | Creative agency Solonitsky, Panchenko and Pershin">
     <link rel="shortcut icon" href="./icon-72x72.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
